--- a/portfolio-details4.html
+++ b/portfolio-details4.html
@@ -10,7 +10,7 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
+  <link href="assets/img/profile.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Vendor CSS Files -->
@@ -150,7 +150,7 @@
       <div class="row">
         <div class="col-sm-12">
           <div class="copyright-box">
-            <center><p>Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | Mridul Gupta :) </center>
+            <center><p>Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved <p> Mridul Gupta :) </p></center>
             </div>
           </div>
         </div>
