--- a/index.html
+++ b/index.html
@@ -347,9 +347,9 @@
         <div class="row">
           <div class="col-md-4">
             <div class="work-box">
-              <a href="assets/img/photo-1501290741922-b56c0d0884af.jfif" data-gallery="portfolioGallery" class="portfolio-lightbox">
+              <a href="assets/img/photo-1501290741922-b56c0d0884af.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
-                  <img src="assets/img/photo-1501290741922-b56c0d0884af.jfif" alt="" class="img-fluid">
+                  <img src="assets/img/photo-1501290741922-b56c0d0884af.jpeg" alt="" class="img-fluid">
                 </div>
               </a>
               <div class="work-content">
