--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                       I am a Mechanical Engineering undergraduate from Delhi Technological University in the 3rd year of my study. I am hugely fascinated by the field of Product, Analytics and Consultancy and would like to pursue a career in the same.
                     </p>
                     <p class="lead">
-                      I have a first hand experience in Product Analytics and Consulting through a variety of Projects and Internships.
+                      I have intern experiences at <a href="https://www.theatom.app">The Atom App</a> as the Product Analytics Consultant, <a href="https://www.pwc.in">PwC India</a> as the Technology Consulting Intern, and <a href="https://www.vecv.in">VE Commercial Vehicles</a> as the Product Strategy Intern.
                       The industries I have worked in include Non-Profit, Automobile, E-commerce etc.
                     </p>
                     <p class="lead">
