--- a/index.html
+++ b/index.html
@@ -149,10 +149,10 @@
                     </p>
                     <p class="lead">
                       I have intern experiences at <a href="https://www.theatom.app">The Atom App</a> as the Product Analytics Consultant, <a href="https://www.pwc.in">PwC India</a> as the Technology Consulting Intern, and <a href="https://www.vecv.in">VE Commercial Vehicles</a> as the Product Strategy Intern.
-                      The industries I have worked in include Non-Profit, Automobile, E-commerce etc.
+
                     </p>
                     <p class="lead">
-                      I am looking for an opportunity in the field of Product Analytics.
+                      I am looking for an opportunity in the field of Product Management.
                     </p>
                     <p class="lead">
                       My interestes include, Playing Guitar, Travelling, Sports and Music.
