--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
           <!--<p class="display-6 color-d">Hello, world!</p>-->
 
           <h1 class="hero-title mb-3">I am Mridul Gupta</h1>
-          <p class="hero-subtitle"><span class="typed" data-typed-items="Consultant, Analyst"></span></p>
+          <p class="hero-subtitle"><span class="typed" data-typed-items="Consultant, Analyst, Engineer"></span></p>
           <!-- <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="#about" role="button">Learn More</a></p> -->
         </div>
       </div>
