--- a/portfolio-details4.html
+++ b/portfolio-details4.html
@@ -72,7 +72,7 @@
     </div>
   </header><!-- End Header -->
 
-  <div class="intro intro-single route bg-image" style="background-image: url(assets/img/black.jpg)">
+  <div class="intro intro-single route bg-image" style="background-image: url(assets/img/Black.jpg)">
 
     <div class="intro-content display-table">
       <div class="table-cell">
