--- a/portfolio-details1.html
+++ b/portfolio-details1.html
@@ -125,7 +125,7 @@
                 <li><strong>Category</strong>: Research Paper</li>
 
                 <li><strong>Project date</strong>: Nov, 2020</li>
-                <li><strong>Project URL</strong>: <a href="https://drive.google.com/file/d/1Dh0iDHvqyxLB4hnxBcINDbZHcPvRX_AO/view"></a>Google Drive Link</li>
+                <li><strong>Project URL</strong>: <a href="https://drive.google.com/file/d/1Dh0iDHvqyxLB4hnxBcINDbZHcPvRX_AO/view">Google Drive Link</a></li>
               </ul>
             </div>
             </div>
