--- a/index.html
+++ b/index.html
@@ -371,6 +371,30 @@
           </div>
           <div class="col-md-4">
             <div class="work-box">
+              <a href="assets/img/dashboard-ios-app-template-swift-analytics-cover.png" data-gallery="portfolioGallery" class="portfolio-lightbox">
+                <div class="work-img">
+                  <img src="assets/img/dashboard-ios-app-template-swift-analytics-cover.png" alt="" class="img-fluid">
+                </div>
+              </a>
+              <div class="work-content">
+                <div class="row">
+                  <div class="col-sm-8">
+                    <h2 class="w-title">Product Analytics</h2>
+                    <div class="w-more">
+                      <span class="w-ctegory">Product Management</span> / <span class="w-date">April 2021</span>
+                    </div>
+                  </div>
+                  <div class="col-sm-4">
+                    <div class="w-like">
+                      <a href="portfolio-details5.html"> <span class="bi bi-plus-circle"></span></a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="work-box">
               <a href="assets/img/xl-1536x864.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
                   <img src="assets/img/xl-1536x864.jpg" alt="" class="img-fluid">
@@ -429,7 +453,7 @@
                   <div class="col-sm-8">
                     <h2 class="w-title">Manufacturing</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Research Paper</span> / <span class="w-date">April. 2021</span>
+                      <span class="w-ctegory">Research Paper</span> / <span class="w-date">April 2021</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
@@ -453,7 +477,7 @@
                   <div class="col-sm-8">
                     <h2 class="w-title">3D Modelling</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Research Paper</span> / <span class="w-date">April. 2021</span>
+                      <span class="w-ctegory">Research Paper</span> / <span class="w-date">April 2021</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
@@ -463,31 +487,7 @@
                   </div>
                 </div>
               </div>
-            </div>
           </div>
-          <!--<div class="col-md-4">
-            <div class="work-box">
-              <a href="assets/img/work-6.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
-                <div class="work-img">
-                  <img src="assets/img/work-6.jpg" alt="" class="img-fluid">
-                </div>
-              </a>
-              <div class="work-content">
-                <div class="row">
-                  <div class="col-sm-8">
-                    <h2 class="w-title">Studio Big Bang</h2>
-                    <div class="w-more">
-                      <span class="w-ctegory">Web Design</span> / <span class="w-date">18 Sep. 2017</span>
-                    </div>
-                  </div>
-                  <div class="col-sm-4">
-                    <div class="w-like">
-                      <a href="portfolio-details.html"> <span class="bi bi-plus-circle"></span></a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-          </div>-->
           </div>
 
         </div>
